--- a/src/MauiEssentials.csproj
+++ b/src/MauiEssentials.csproj
@@ -58,6 +58,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="LICENSE.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="MauiExtensions.vsext">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
