limit files inside the vsix that are signed on release

--- a/src/MauiEssentials.csproj
+++ b/src/MauiEssentials.csproj
@@ -46,6 +46,7 @@
     <DeployExtension>False</DeployExtension>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="filestosign.txt" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="source.extension.cs">
       <AutoGen>True</AutoGen>
